# octogen-showcase

./: .pre-commit-config.yaml  LICENSE
feed/: Dockerfile  build.sh  pyproject.toml  server.py
feed/src/octogen/showcase/feed/: __init__.py  agent.py  router.py  server.py
tests/: typecheck.sh
